bk_ida/mcfida/g3/refresh_neighbour_lists
mcfutil.c:512:12: error: expected expression
*( _OWORD *)p_firstout = 0LL; 
           ^
mcfutil.c:512:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)p_firstout = 0LL; 
   ^
2 errors generated.
